--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "start": "ts-node index.ts",
+    "build": "ts-node index.ts",
     "watch": "nodemon index.ts"
   },
   "dependencies": {
